tests/fixtures/positive/structure/InnerClassesCannotBeStatic.cls
public class Outer {
    public class Inner {
        // Non-static inner class - valid
    }
}

