tests/fixtures/negative/design/InnerClassesCannotBeStatic.cls
public class Outer {
    public static class Inner {
        // Static inner class - should trigger rule
    }
}

